--- a/templates/profiles/Index.html
+++ b/templates/profiles/Index.html
@@ -18,7 +18,7 @@
             <!-- Fixed navbar -->
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">Skolo Online Chat GPT DEMO</a>
+                <a class="navbar-brand" href="/">ChatPPP - Versión Demo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -50,7 +50,7 @@
                     <img src="https://digital-practice.ams3.cdn.digitaloceanspaces.com/static%2Fapp%2Fimg%2Fopenai-logo.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                         <div>
-                        <p class="mb-0 opacity-75">Hi, my name is Karabo - the helpful assistant, how can i help you today?</p>
+                        <p class="mb-0 opacity-75">Hola, mi nombre es ChatPPP - soy un asistente virtual, cómo puedo ayudarte hoy?</p>
                         </div>
                     </div>
                     </a>
@@ -58,7 +58,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" id="chat-input">
                     <div class="input-group-append">
-                    <button id="gpt-button" class="btn btn-primary">Ask ChatGPT</button>
+                    <button id="gpt-button" class="btn btn-primary">Enviar</button>
                     </div>
                 </div>
             
